fix: social icons are size is too big in safari mobile

--- a/src/components/atoms/container/container.module.scss
+++ b/src/components/atoms/container/container.module.scss
@@ -1,7 +1,7 @@
 .selection_container {
   display: grid;
   justify-items: center;
-  padding-inline: 2.5rem;
+  padding-inline: 1.5rem;
 
   @media (min-width: $screen-md) {
     width: 83%;
