--- a/src/components/molecules/icon_link/icon_link.module.scss
+++ b/src/components/molecules/icon_link/icon_link.module.scss
@@ -24,4 +24,5 @@
 
 .icon {
   aspect-ratio: 1 / 1;
+  max-width: 2rem;
 }
